Add question-section and its basic style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,12 @@ header {
     justify-content: space-between;
     align-items: center;
     top: 0;
-    left:0;
+    left: 0;
     padding: 1em;
     position: fixed;
     z-index: 5;
     width: 100%;
-    background-color:transparent;
+    background-color: transparent;
 }
 
 /* Title */
@@ -47,19 +47,37 @@ header {
 }
 
 #header-word-1 {
-    color:#daf5ec;
+    color: #daf5ec;
 }
 
 #header-word-2 {
-    color:#a3c18b;
+    color: #a3c18b;
 }
 
 /* Main */
 main {
+    display: flex;
     min-height: 95vh;
     background: url("../images/background-image.webp") no-repeat center center/cover;
+    flex-grow: 1;
+    justify-content: center;
+    padding: 0
+
 }
 
+#question-container {
+    background: #daf5ec;
+    flex-direction: column;
+    margin: 10em, 1em, 3em;
+    align-self: center;
+    border-radius: 1em 1em;
+    padding: 1em 1em;
+    justify-content: center;
+}
+
+#question-section {
+    padding: 1em 1em;
+}
 
 /* Footer */
 footer {
