Add validateAnswer function that substitute selectAnswer, doing both functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,8 @@ main h2 {
     cursor: pointer;
 }
 
-.btn-option:hover {
+/* Not disable stops the hover effect after the question is answered*/ 
+.btn-option:hover not(:disabled) {
     width: 100%;
     padding: 0.4em 0.3em 0.4em;
     background: #33414e;
@@ -138,9 +139,19 @@ main h2 {
     font-weight: 800;
     margin: 0.3em auto 0.2em;
     cursor: pointer;
-    display: block;
+    display: none; /* Changes with validateAnswer() */
+}
+/* Set styles from validateAnswer() */ 
+
+.correct {
+    background: rgb(11, 165, 29);
+    
 }
 
+.incorrect {
+    background: hwb(355 39% 13%);
+    
+}
 
 
 /* Footer */
