--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,15 @@ main {
     flex-grow: 1;
     justify-content: center;
     padding: 0
+}
 
+
+#instructions-box {
+    display: block;
+}
+
+#quiz-box {
+    display: none;
 }
 
 #question-container {
@@ -82,13 +90,14 @@ main {
     padding: 0.5em 0.5em;
 }
 
-main h1 {
+main h2 {
     font-weight: 500;
     text-align: center;
+    font-size: 1.5em;
     padding: 0 0.3em 0.3em;
 }
 
-main h2 {
+main h3 {
     font-weight: 450;
     font-size: 1.2em;
     text-align: justify;
