refactor: formats script.js, add missing semicolons and remove unused variables after jshint validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ main {
 }
 
 /* Sign in */
-.white-haloplayer-name {
+.white-halo {
     color: #FAF9F6;
     filter: drop-shadow(0 0 2px #33414e);
     font-size: 1.2em;
