style: center items of 404 page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,6 +358,13 @@ main h3 {
     background-color: rgba(32, 89, 108);
 }
 
+#page-not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Footer */
 footer {
     background-color: #f7e2b7;
